--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     </div>
     <div id="video">
-        <h3 class="contentHeaders">Video</h3>
+        <h3 class="contentHeaders">Devlog</h3>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLxXBbGk0AMMOmGpO_KjNM9IFjr2YeSXKk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 
