--- a/index.html
+++ b/index.html
@@ -40,19 +40,15 @@
 
     <div id="content">
         <h3 class="contentHeaders">Projects</h3>
-        <div id="kotl" class="category">
+        <div id="remains" class="category">
             <div class="categorylink">
-                <a href="kotl.html">
-                    Keepers of the Light
-                </a>
+                <a>Remains</a>
             </div>
             <div class="categoryimage">
-                <a href="kotl.html">
-                    <img src="images/icon.png" height="128px" width="128px">
-                </a>
+                <img src="images/icon.png" height="128px" width="128px">
             </div>
             <div class="categorynotes">
-                An original indie game 7 years in the making
+                An original indie game
             </div>
 
         </div>
