--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 <body>
     <div id="header">
-
         <a href="index.html" id="headerlink">
             <!--The bg color is #717171-->
             <h1 id="headerText"><img src="images/icon.png" id="headerIcon" height="128px" width="128px">kketg</h1>
@@ -28,89 +27,23 @@
                 <img src="images/ko-fi.png" height="50px" width="50px">
             </a>
         </div>
-
-
-
-    </div>
-    <div id="video">
-        <h3 class="contentHeaders">Devlog</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLxXBbGk0AMMOmGpO_KjNM9IFjr2YeSXKk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 
-
-    <div id="content">
-        <h3 class="contentHeaders">Projects</h3>
-        <div id="remains" class="category">
-            <div class="categorylink">
-                <a>Remains</a>
-            </div>
-            <div class="categoryimage">
-                <img src="images/icon.png" height="128px" width="128px">
-            </div>
-            <div class="categorynotes">
-                An original indie game
-            </div>
-
-        </div>
-        <div id="jServ" class="category">
-            <div class="categorylink">
-                <a href="https://github.com/kketg/jServ">
-                    jServ
-                </a>
-            </div>
-            <div class="categoryimage">
-                <a href="https://github.com/kketg/jServ">
-                    <img src="images/jservicon.png" height="128px" width="128px">
-                </a>
-            </div>
-            <div class="categorynotes">
-                A flexible json database server
-            </div>
-
-        </div>
-        <div id="Sparkplug" class="category">
-            <div class="categorylink">
-                <a href="https://github.com/SparkplugTeam">
-                    Sparkplug
-                </a>
-            </div>
-            <!--oofie
-                <div class="categoryimage">
-                <a href="https://github.com/SparkplugTeam">
-                    <img src="images/psych logo.png" height="128px" width="128px">
-                </a>
-            </div>-->
-            <div class="categorynotes">
-                <p>
-                    A privacy oriented social media site using jServ
-                </p>
-                <p>
-                    Developed with <a href="https://github.com/SomethingGeneric">SomethingGeneric</a>
-                </p>
-            </div>
-        </div>
-        <div id="Venture" class="category">
-            <div class="categorylink">
-                <a href="https://github.com/kketg/Venture-Scout-Advancement-Tool">
-                    Venture Scout Advancement Tool
-                </a>
-            </div>
-            <div class="categoryimage">
-                <a href="https://github.com/kketg/Venture-Scout-Advancement-Tool">
-                    <img src="images/VentureIcon.png" height="128px" width="128px">
-                </a>
-            </div>
-            <div class="categorynotes">
-                <p>
-                    A web application that manages a local database of venturers and their ranks
-                </p>
-                <p>
-                    Developed with <a href="https://github.com/SomethingGeneric">SomethingGeneric</a>
-                </p>
-            </div>
-
-        </div>
+    <div id="redirector">
+        <h1>
+            Hello!
+        </h1>
+        <p id="p1">
+            This site has been moved to <a href="https://www.kketg.me">kketg.me</a>.
+        </p>
+        <p id="p2">
+            You can find information about my projects there.
+        </p>
+        <p id="p3">
+            You can contact me at <a href="mailto:kketg@xhec.us">kketg@xhec.us</a>, or view my other content with the links above.
+        </p>
     </div>
+
     <div id="copyright">
         Copyright (c) 2021, Kristofer Ter-Gabrielyan. All Rights Reserved.
     </div>
