changed email addres

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             You can find information about my projects there.
         </p>
         <p id="p3">
-            You can contact me at <a href="mailto:kketg@xhec.us">kketg@xhec.us</a>, or view my other content with the links above.
+            You can contact me at <a href="mailto:kris@kketg.me">kris@kketg.me</a>, or view my other content with the links above.
         </p>
     </div>
 
