--- a/index.html
+++ b/index.html
@@ -20,12 +20,6 @@
             <a href="https://github.com/kketg" class="links">
                 <img src="images/github.png" height="50px" width="50px">
             </a>
-            <a href="https://patreon.com/kketg" class="links">
-                <img src="images/patreon.jpg" height="50px" width="50px">
-            </a>
-            <a href="https://ko-fi.com/kketg" class="links">
-                <img src="images/ko-fi.png" height="50px" width="50px">
-            </a>
         </div>
     </div>
 
@@ -34,13 +28,14 @@
             Hello!
         </h1>
         <p id="p1">
-            This site has been moved to <a href="https://www.kketg.me">kketg.me</a>.
+            I'm Kris Ter-Gabrielyan <br>
+            You can find information about my projects with the links above.
         </p>
         <p id="p2">
-            You can find information about my projects there.
+            Videos about my game are on my youtube channel.
         </p>
         <p id="p3">
-            You can contact me at <a href="mailto:kris@kketg.me">kris@kketg.me</a>, or view my other content with the links above.
+            You can contact me at <a href="mailto:kketg03@gmail.com">kketg03@gmail.com</a>.
         </p>
     </div>
 
