--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             You can find information about my projects with the links above.
         </p>
         <p id="p2">
-            Videos about my game are on <a href="https://www.youtube.com/channel/UC4wi_0cq-OG8F3QGkvLNgag">my youtube channel</a>.
+            Information about my projects can be found at <a href="https://codealchemi.com">my business site</a> or <a href="https://www.youtube.com/channel/UC4wi_0cq-OG8F3QGkvLNgag">my youtube channel</a>
         </p>
         <p id="p3">
             You can contact me at <a href="mailto:kketg03@gmail.com">kketg03@gmail.com</a>.
