--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
             Hello!
         </h1>
         <p id="p1">
-            I'm Kris Ter-Gabrielyan <br>
-            You can find information about my projects with the links above.
+            I'm Kris Ter-Gabrielyan <br> You can find information with the links above.
         </p>
         <p id="p2">
-            Information about my projects can be found at <a href="https://codealchemi.com">my business site</a> or <a href="https://www.youtube.com/channel/UC4wi_0cq-OG8F3QGkvLNgag">my youtube channel</a>
+            My projects can be found at <a href="https://codealchemi.com">my business site</a> or <a href="https://www.youtube.com/channel/UC4wi_0cq-OG8F3QGkvLNgag">my youtube channel</a>
         </p>
         <p id="p3">
             You can contact me at <a href="mailto:kketg03@gmail.com">kketg03@gmail.com</a>.
