--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head profile>
-    <title>kketg | Open source software for developers</title>
+    <title>kketg</title>
     <link rel="icon" type="image/png" href="images/icon.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,8 @@
     <div id="header">
         <a href="index.html" id="headerlink">
             <!--The bg color is #717171-->
-            <h1 id="headerText"><img src="images/icon.png" id="headerIcon" height="128px" width="128px">kketg</h1>
+            <img src="images/icon.png" id="headerIcon" height="96px" width="96px">
+            <h1 id="headerText">kketg</h1>
         </a>
         <div id="links">
             <a href="https://www.youtube.com/channel/UC4wi_0cq-OG8F3QGkvLNgag" class="links">
@@ -28,18 +29,18 @@
             Hello!
         </h1>
         <p id="p1">
-            I'm Kris Ter-Gabrielyan <br> You can find information with the links above.
+            I'm Kris Ter-Gabrielyan, and I'm a junior at RPI <br><br> You can find some information with the links above.
         </p>
         <p id="p2">
-            My projects can be found at <a href="https://codealchemi.com">my business site</a> or <a href="https://www.youtube.com/channel/UC4wi_0cq-OG8F3QGkvLNgag">my youtube channel</a>
+            My projects can be found at <a href="https://alchemicode.com">my business site</a> or <a href="https://www.youtube.com/channel/UC4wi_0cq-OG8F3QGkvLNgag">my youtube channel</a>
         </p>
         <p id="p3">
-            You can contact me at <a href="mailto:kketg03@gmail.com">kketg03@gmail.com</a>.
+            You can contact me at <a href="mailto:tergak@rpi.edu">tergak@rpi.edu</a> or <a href="mailto:kketg03@gmail.com">kketg03@gmail.com</a>.
         </p>
     </div>
 
     <div id="copyright">
-        Copyright (c) 2021, Kristofer Ter-Gabrielyan. All Rights Reserved.
+        Copyright (c) 2023, Kristofer Ter-Gabrielyan. All Rights Reserved.
     </div>
 </body>
 
