--- a/index.html
+++ b/index.html
@@ -15,32 +15,39 @@
             <h1 id="headerText">kketg</h1>
         </a>
         <div id="links">
-            <a href="https://www.youtube.com/channel/UC4wi_0cq-OG8F3QGkvLNgag" class="links">
-                <img src="images/youtube.png" height="50px" width="50px">
+            <a href="https://linkedin.com/in/kketg" class="links">
+                <img src="images/linkedin.png" height="50px" width="50px">
             </a>
             <a href="https://github.com/kketg" class="links">
                 <img src="images/github.png" height="50px" width="50px">
+            </a>
+            <a href="https://www.youtube.com/channel/UC4wi_0cq-OG8F3QGkvLNgag" class="links">
+                <img src="images/youtube.png" height="50px" width="50px">
             </a>
         </div>
     </div>
 
     <div id="redirector">
         <h1>
-            Hello!
+            Hi! :3
         </h1>
         <p id="p1">
-            I'm Kris Ter-Gabrielyan, and I'm a junior at RPI <br><br> You can find some information with the links above.
+            My name's Kris Ter-Gabrielyan, and I'm a Backend Engineer, Musician, and RPI Graduate.
         </p>
+        <br><br>
         <p id="p2">
-            My projects can be found at <a href="https://alchemicode.com">my business site</a> or <a href="https://www.youtube.com/channel/UC4wi_0cq-OG8F3QGkvLNgag">my youtube channel</a>
+            My resume can be found <a href="Resume_KTG.pdf">here</a>
         </p>
         <p id="p3">
-            You can contact me at <a href="mailto:tergak@rpi.edu">tergak@rpi.edu</a> or <a href="mailto:kketg03@gmail.com">kketg03@gmail.com</a>.
+            You can find more information with the links above
+        </p>
+        <p id="p4">
+            You can contact me at <a href="mailto:kketg03@gmail.com">kketg03@gmail.com</a>
         </p>
     </div>
 
     <div id="copyright">
-        Copyright (c) 2023, Kristofer Ter-Gabrielyan. All Rights Reserved.
+        Copyright (c) 2026, Kristofer Ter-Gabrielyan. All Rights Reserved.
     </div>
 </body>
 
