Added itch to links + updated resume

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <a href="https://github.com/kketg" class="links">
                 <img src="images/github.png" height="50px" width="50px">
             </a>
+            <a href="https://alchemicode.itch.io" class="links">
+                <img src="images/itch.svg" height="62px" width="62px">
+            </a>
             <a href="https://www.youtube.com/channel/UC4wi_0cq-OG8F3QGkvLNgag" class="links">
                 <img src="images/youtube.png" height="50px" width="50px">
             </a>
@@ -39,7 +42,7 @@
             My resume can be found <a href="Resume_KTG.pdf">here</a>
         </p>
         <p id="p3">
-            You can find more information with the links above
+            You can find more stuff with the links in the header
         </p>
         <p id="p4">
             You can contact me at <a href="mailto:kketg03@gmail.com">kketg03@gmail.com</a>
