Portfolio page + header links

--- a/index.html
+++ b/index.html
@@ -1,51 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head profile>
     <title>kketg</title>
-    <link rel="icon" type="image/png" href="images/icon.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="images/icon.png" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <div id="header">
         <a href="index.html" id="headerlink">
             <!--The bg color is #717171-->
-            <img src="images/icon.png" id="headerIcon" height="96px" width="96px">
+            <img src="images/icon.png" id="headerIcon" height="96px" width="96px" />
             <h1 id="headerText">kketg</h1>
         </a>
+        <nav>
+            <a href="index.html" class="selected-nav">//home</a>
+            <a href="Resume_KTG.pdf">//resume</a>
+            <a href="portfolio.html">//portfolio</a>
+        </nav>
         <div id="links">
             <a href="https://linkedin.com/in/kketg" class="links">
-                <img src="images/linkedin.png" height="50px" width="50px">
+                <img src="images/linkedin.png" height="50px" width="50px" />
             </a>
             <a href="https://github.com/kketg" class="links">
-                <img src="images/github.png" height="50px" width="50px">
+                <img src="images/github.png" height="50px" width="50px" />
             </a>
             <a href="https://alchemicode.itch.io" class="links">
-                <img src="images/itch.svg" height="62px" width="62px">
+                <img src="images/itch.svg" height="62px" width="62px" />
             </a>
             <a href="https://www.youtube.com/channel/UC4wi_0cq-OG8F3QGkvLNgag" class="links">
-                <img src="images/youtube.png" height="50px" width="50px">
+                <img src="images/youtube.png" height="50px" width="50px" />
             </a>
         </div>
     </div>
 
     <div id="redirector">
-        <h1>
-            Hi! :3
-        </h1>
-        <p id="p1">
-            My name's Kris Ter-Gabrielyan, and I'm a Backend Engineer, Musician, and RPI Graduate.
-        </p>
-        <br><br>
-        <p id="p2">
-            My resume can be found <a href="Resume_KTG.pdf">here</a>
-        </p>
-        <p id="p3">
-            You can find more stuff with the links in the header
-        </p>
+        <h1>Hi! :3</h1>
+        <p id="p1">My name's Kris Ter-Gabrielyan</p>
+        <p id="p2">I'm a Backend Engineer, Musician, and RPI Graduate.</p>
+        <p id="p3">You can find my stuff with the links in the header</p>
         <p id="p4">
-            You can contact me at <a href="mailto:kketg03@gmail.com">kketg03@gmail.com</a>
+            You can contact me at
+            <a href="mailto:kketg03@gmail.com">kketg03@gmail.com</a>
         </p>
     </div>
 
