Fixed sdop portfolio link

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
                     Servision
                 </h2>
             </a>
-            <a href="https://github.com/alchemicode/jServ">
+            <a href="https://github.com/alchemicode/sdop">
                 <img src="images/sdop.png">
                 <h2 class="image-label bottom-left-shadow">
                     SDOP
