Added portfolio descriptions, updated resume

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,23 +37,26 @@
 
     <div class="page-section" style="text-align: center; flex-direction:column;">
         <div class="image-row indent fade-in-from-left">
-            <a href="https://github.com/alchemicode/jServ">
-                <img src="images/jserv.png">
-                <h2 class="image-label bottom-left-shadow">
-                    jServ
-                </h2>
-            </a>
             <a href="https://github.com/kketg/servision">
                 <img src="images/servision.png">
                 <h2 class="image-label bottom-left-shadow">
                     Servision
                 </h2>
+                <p class="image-label-desc">Orchestrator for computational models</p>
+            </a>
+            <a href="https://github.com/alchemicode/jServ">
+                <img src="images/jserv.png">
+                <h2 class="image-label bottom-left-shadow">
+                    jServ
+                </h2>
+                <p class="image-label-desc">Flexible database backend server</p>
             </a>
             <a href="https://github.com/alchemicode/sdop">
                 <img src="images/sdop.png">
                 <h2 class="image-label bottom-left-shadow">
                     SDOP
                 </h2>
+                <p class="image-label-desc">Data Object GUI</p>
             </a>
         </div>
         <br><br>
